--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -37,8 +37,11 @@
         font-weight: 500;
     }
 }
+.review-header{
+    margin-top: 40px;
+}
 #wpsl-wrap{
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 
